Adding connection to database

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <hr>
     <div class="title">Read All</div>
     <form action="http://127.0.0.1:8000/read_all" method="get">
-        <button type="submit" name="read_all">Get All</button>
+        <button type="submit" >Get All</button>
     </form>
 </div>
 <div class="container">
